# 2023-11-28-refactor-homework-d0ggzi

./: pyproject.toml
renamer/: entry.py
renamer/hangman/: hangman.py  hangman_class.py  import_me.py  modified_class_hangman.py  modified_func_hangman.py  renamed_hangman.py  start_game_func.py
tests/: test_entry.py  test_hangman.py
tests/fixtures/: hangman_without_class.py  hangman_without_func.py  moved_hangman_class.py  moved_hangman_func.py  renamed_hangman_class.py  renamed_hangman_func.py
tests/fixtures/hangman/: hangman.py  import_me.py
