[tool.poetry]
name = "renamer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "^1.0.0"
requests = "^2.31.0"
pytest-freezer = "^0.4.8"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
